--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "start": "ts-node-dev src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.8",
@@ -22,7 +25,10 @@
     "@types/express": "^4.17.21",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
+    "nodemon": "^3.1.2",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   }
 }
