--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "-": "^0.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "nodemon": "^3.1.2",
