--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,10 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 5s
       retries: 1
-
+  redis:
+    image: 'redis:alpine'
+    ports:
+      - '6379:6379'
   app:
     build: .
     container_name: social-media-container
