--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
-    "start": "ts-node-dev src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "build": "rimraf ./dist && tsc",
+    "dev": "ts-node-dev --poll src/index.ts",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -30,8 +30,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
-    "nodemon": "^3.1.2",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
