--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
     image: 'redis:alpine'
     ports:
       - '6379:6379'
+    networks:
+      - local_network
+
   app:
     build: .
     container_name: social-media-container
@@ -42,6 +45,7 @@ services:
       - local_network
     volumes:
       - .:/app
+      - /app/node_modules
 
 networks:
   local_network:
